--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /HomeWork1/.vs
 /HomeWork2/.vs
+/.vs
+/HomeWork2/Layered Architecture/Catalog Service/.vs
+/HomeWork2/Layered Architecture/Catalog Service/Catalog Service/bin/Debug/net7.0
+/HomeWork2/Layered Architecture/Catalog Service/Catalog Service/obj
