homework 2 / task 2 commit

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@
 /HomeWork2/Layered Architecture/CartingService/.vs/CartingService
 /HomeWork2/Layered Architecture/CartingService/CartingService/bin/Debug/net7.0
 /HomeWork2/Layered Architecture/CartingService/CartingService/obj
+/HomeWork2/Clean Architecture/Catalog Service/.vs
+/HomeWork2/Clean Architecture/Catalog Service/Catalog Service/obj
+/HomeWork2/Clean Architecture/Catalog Service/Catalog Service Web Api/bin/Debug/net7.0
+/HomeWork2/Clean Architecture/Catalog Service/Catalog Service Web Api/obj
+/HomeWork2/Clean Architecture/Catalog Service/CatalogService.BLL/bin/Debug/net7.0
+/HomeWork2/Clean Architecture/Catalog Service/CatalogService.BLL/obj
+/HomeWork2/Clean Architecture/Catalog Service/CatalogService.DAL/bin/Debug/net7.0
+/HomeWork2/Clean Architecture/Catalog Service/CatalogService.DAL/obj
+/HomeWork2/Clean Architecture/Catalog Service/Infrastructure/bin/Debug/net7.0
+/HomeWork2/Clean Architecture/Catalog Service/Infrastructure/obj
