--- a/HomeWork2/Clean Architecture/Catalog Service/Infrastructure/Infrastructure.csproj
+++ b/HomeWork2/Clean Architecture/Catalog Service/Infrastructure/Infrastructure.csproj
@@ -8,13 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Catalog.Data.EFMsSql\Catalog.Data.EFMsSql.csproj" />
     <ProjectReference Include="..\CatalogService.BLL\Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
