initial commit for Homework3 -Task 1

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 
 /HomeWork1/.vs
 /HomeWork2/.vs
+/.vs
+/Homework3/Catalog Service/.vs/Catalog Service
+/Homework3/Catalog Service/Catalog Service/obj
+/Homework3/Catalog Service/Catalog Service/bin/Debug/net7.0
