removed unsed files

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /Homework4/AzureServiceBusMessageBroker/Basket Service/bin/Debug/net7.0
 /Homework4/AzureServiceBusMessageBroker/Catalog Service/bin/Debug/net7.0
 /Homework4/AzureServiceBusMessageBroker/Catalog Service/obj
+/Homework4/.vs
