HW4 - with some misconfigured parts

--- a/Homework4/AzureServiceBusMessageBroker/Basket Service/appsettings.json
+++ b/Homework4/AzureServiceBusMessageBroker/Basket Service/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source=EPAMYERW02F5;initial catalog=MyDatabase;integrated security=True;;TrustServerCertificate=true;MultipleActiveResultSets=True;App=EntityFramework"
   },
+  "AzureServiceBus": {
+    "ServiceBusConnectionString": "",
+    "TopicName": "baskettopic",
+    "SubscriptionName": "BasketServiceSub"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
