--- a/Homework4/AzureServiceBusMessageBroker/AzureServiceBusMessageBroker/AzureServiceBusMessageBroker.csproj
+++ b/Homework4/AzureServiceBusMessageBroker/AzureServiceBusMessageBroker/AzureServiceBusMessageBroker.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
