feat / comment for HW5 Task 1

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@
 /Homework4/AzureServiceBusMessageBroker/Catalog Service/bin/Debug/net7.0
 /Homework4/AzureServiceBusMessageBroker/Catalog Service/obj
 /Homework4/.vs
+/Homework5/Task1/Identity Server/.vs/Identity Server
+/Homework5/Task1/Identity Server/Identity Management System/obj
+/Homework5/Task1/Identity Server/Client/bin/Debug/net8.0
+/Homework5/Task1/Identity Server/Client/obj
+/Homework5/Task1/Identity Server/Identity Management System/bin/Debug/net8.0
