initial commit for Task 2

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,14 @@
 /Homework5/Task1/Identity Server/Client/bin/Debug/net8.0
 /Homework5/Task1/Identity Server/Client/obj
 /Homework5/Task1/Identity Server/Identity Management System/bin/Debug/net8.0
+/Homework5/Task2/Catalog Service/obj
+/Homework5/Task2/CartingService/obj
+/Homework5/Task2/CartingService/bin/Debug/net7.0
+/Homework5/Task2/Catalog Service/bin/Debug/net7.0
+/Homework5/Task2/Identity Management System/bin/Debug/net8.0
+/Homework5/Task2/Identity Management System/obj
+/Homework5/Task2/Identity Managment System/.vs/Identity Managment System
+/Homework5/Task2/Identity Managment System/Identity Managment System/obj
+/Homework5/Task2/Identity Managment System/Client/bin/Debug/net8.0
+/Homework5/Task2/Identity Managment System/Client/obj
+/Homework5/Task2/Identity Managment System/.vs/ProjectEvaluation
